# synthet-adc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  idea.yml
.github/workflows/: ci.yml  publish.yml
examples/: render_demo.py
src/synthet/: __init__.py  __main__.py  app.py  audio_engine.py  bitstring.py  envelope.py  input_router.py  midi_io.py  modulokoto.py  settings.py  storage.py  surfaces.py  synth.py  tuning.py
tests/: test_core.py  test_gui.py
