[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "synthet-adc"
version = "0.1.0"
description = "A computer-native instrument: a strum/pitch input matrix, playhead envelopes, and impossible-physics synths"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Solteris-Dev" }]
keywords = ["synth", "instrument", "physical-modelling", "chiptune", "karplus-strong"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "PySide6>=6.5",
]

[project.optional-dependencies]
# FX chain (Reverb + VST3/AU hosting). The app runs without it (dry synth).
fx = ["pedalboard>=0.9"]
# MIDI mode-switch driver. The app runs without it (no external mode control).
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
all = ["synthet-adc[fx,midi]"]

[project.scripts]
synthet-adc = "synthet.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["synthet*"]           # never sweep up a stray venv / cache dir
